<resources>
    <string name="app_name">CSL Tracker</string>
    <string name="title_activity_detail_stat">DetailStat</string>
    <string name="action_settings">Set Player</string>
    <string name="action_settings_detail_fragment">Set Player</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_stat_detail">DetailStat</string>
    <string name="fetch_activity">FetchActivity</string>
    <string name="switch_player">SWITCH PLAYER</string>
    <string name="add_to_list">ADD TO LIST</string>

    <string name="no_info_available">Loading Data...</string>
    <string name="no_info_available_NO_NETWORK">No Player Information Available. Network is not available.</string>
    <string name="no_info_available_SERVER_INVALID">No Player Information Available. The server is not returning valid data.
        Please check for an updated version.</string>
    <string name="no_info_available_SERVER_DOWN">No Player Information Available. The server is not returning data.</string>


    <string name="pref_player_status_key">player-status</string>
    <string name="p61034">拉尔夫</string>
    <string name="p116730">武磊</string>
    <string name="p168101">费尔南多</string>
    <string name="拉尔夫">61034</string>
    <string name="武磊">116730</string>
    <string name="费尔南多">168101</string>
    <string name="pref_player_default">116730</string>
    <string name="detail_item_name">Name</string>
    <string name="detail_item_team">Team</string>
    <string name="detail_item_goal">Goal</string>
    <string name="detail_item_kp">Key Pass</string>
    <string name="detail_item_pt">Play Time</string>
    <string name="detail_item_score">Score</string>
    <string name="detail_item_yc">Yellow Card</string>
    <string name="detail_item_rc">Red Card</string>
    <string name="pref_player_name">Player</string>
    <string name="pref_name_key">Name</string>
    <string name="shots">Shots/On Target</string>
    <string name="foul">Foul/Fouled</string>
    <string name="clearance">Clearance</string>
    <string name="save">Save</string>
    <string name="cards">Yellow/Red Card</string>
    <string name="takeon">Successful Takeon</string>
    <string name="title_activity_settings">Set Player</string>
    <string name="main_match_stat">See Match Stat</string>
    <string name="main_form">Current Form</string>
    <string name="form_default">8.0</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="main_gridview_main">Season Apperance</string>
    <string name="main_gridview_goal">Season Goal</string>
    <string name="main_gridview_rating">Season Average Rating</string>
    <string name="main_gridview_age">Age</string>
    <string name="main_gridview_position">Position</string>
    <string name="main_gridview_height">Height</string>
    <string name="main_gridview_number">Kit Number</string>
    <string name="detail_scoreview_game">Chinese Super League</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">CSL</string>
    <string name="content_authority">tom.chinesefootballtracker.data.StatProvider</string>

    <string name="宗磊">113067</string>
    <string name="杜佳">180532</string>
    <string name="杨启鹏">113512</string>
    <string name="杨泽翔">155932</string>
    <string name="儒尼奥尔">80353</string>
    <string name="潘喜明">210564</string>
    <string name="约万诺维奇">109441</string>
    <string name="周海滨">36476</string>
    <string name="聊博超">102821</string>
    <string name="白岳峰">83759</string>
    <string name="聂涛">102959</string>
    <string name="苑维玮">113389</string>
    <string name="曹阳">27578</string>
    <string name="李本舰">102816</string>
    <string name="胡人天">102817</string>
    <string name="王秋明">155951</string>
    <string name="郭毅">185319</string>
    <string name="郭皓">155935</string>
    <string name="曲波">13119</string>
    <string name="李源一">185328</string>
    <string name="周通">113103</string>
    <string name="蒂亚戈内">164011</string>
    <string name="蒙特罗">57252</string>
    <string name="惠家康">113509</string>
    <string name="埃沃纳">144130</string>
    <string name="范柏群">102961</string>
    <string name="李志斌">155954</string>

</resources>
