<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_grid_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    android:background="@color/detail_accent_pane_background"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingLeft="@dimen/csl_detail_horizontal_padding"
    android:paddingStart="@dimen/csl_detail_horizontal_padding"
    android:paddingRight="@dimen/csl_detail_horizontal_padding"
    android:paddingEnd="@dimen/csl_detail_horizontal_padding">

    <TextView
        android:text="@string/detail_item_pt"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_playtime"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"/>

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/detail_item_goal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_gravity="fill"
        app:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/fragment_details_goal"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"/>

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="Keypass"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_keypass"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/shots"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_shots"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/takeon"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_takeon"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/clearance"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_clearance"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/foul"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_foul"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/cards"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_details_cards"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill" />



</android.support.v7.widget.GridLayout>