<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_grid_bio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:columnCount="2"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="@color/grey"
    >

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/main_gridview_age"
        android:textSize="20dp"
        android:textColor="@color/primary_text"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1"/>

    <TextView
        android:id="@+id/fragment_main_age"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="25"
        app:layout_gravity="center"/>

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/main_gridview_position"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_main_position"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="forward"
        app:layout_gravity="center"/>

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/main_gridview_height"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_main_height"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="176cm"
        app:layout_gravity="center"/>

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/main_gridview_number"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/fragment_main_number"
        android:gravity="center_vertical"
        android:textColor="@color/primary_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="9"
        app:layout_gravity="center"/>

</android.support.v7.widget.GridLayout>